--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.21.1",
     "next": "10.0.6",
     "nextjs-progressbar": "^0.0.7",
+    "photoswipe": "^4.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-photoswipe-gallery": "^1.3.4",
     "react-redux": "^7.2.2",
     "react-text-mask": "^5.4.3",
     "redux": "^4.0.5",
